2001-11-15  Elliot Glaysher  <glaysher@umich.edu>

	* lib/keenspot (elf): updated Elf life missing dates.

2001-11-14  Elliot Glaysher  <glaysher@umich.edu>

	* The "I should probably get off my lazy butt and do something" commit.
	* lib/keenspace: Alphabetized order of comic modules.
	* lib/keenspot (avalon): Updated Avalon's @missing list.
	(keenspot): Fixed regex so it should work. changed "\w+" to "\w*" since
	Avalon sometimes has filenames like avalon20010909s2.gif.

2001-10-02  Elliot Glaysher  <glaysher@umich.edu>

	* lib/megatokyo: Updated to meet megatokyo's erratic archive schedule.
	* lib/doemain: cleared out a non STDERR error message.

2001-10-01  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* INSTALL: Bug 466330: Changed reference to INSTALLBIN to
	INSTALLSCRIPT for changing the location of where the bin scripts
	are installed.
	* show_comics (when_leaving_dialog): Changed report of perlTK
	require error to state that perlTK might not be installed correct
	as well as maybe it's not installed at all.

2001-09-22  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/HTML/Themes/Default.pm (new): Switched over to the new
	inherited theme system.
	* Netcomics/HTML.pm (create_toplevel_page_set): Added function.
	Basically create_basic_page_set with special conditions.
	* netcomics: Have netcomics use the new create_toplevel_page_set()
	for toplevel pages instead of create_basic_page_set().
	* Netcomics/HTML/Set.pm (create_set_of_pages): Changed 'group_num' to
	'group_number' in every instance. A small bug was being caused by
	inconsistent usage of both in both Set.pm and Page.pm.
	(new): Added new default property, 'link_to_local_archives' => 0.
	(create_set_of_pages): Pass the new property to Page.pm.
	(create_set_of_pages): Changed every instance of
	$self->{'theme'}->{'*'} to $self->{'theme'}->{'html'}{'*'} per
	Ben's suggestion.
	* Netcomics/Config.pm.in: Strange construct was causing bug. Fixed