@@ -149,6 +149,7 @@ sub avalon {
     my $date2 = strftime("%Y%m%d", @ltime2);
 
    # Last updated November 14, 2001
+	# For some reason, 20010211 and 20010325 don't downlaod properly.
     my @missing = (20000305,20000507,20000521,20000629,20000630,20000703,
       20000704,20000705,20000827,20000903,20000910,20000924,20001105,
       20001217,20001231,20010107,20010514,20010515,20010516,20010517,
